--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TODO: Set the document title to the name of your application -->
-    <title>Drippss - premium activewear</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Drippss</title>
+    <meta name="description" content="Premium activewear — Drippss." />
+    <meta name="author" content="Drippss" />
+    <link rel="icon" href="/favicon.ico" />
 
     <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Drippss" />
+    <meta property="og:description" content="Premium activewear & leggings — Drippss." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og.png" />
+    <meta property="og:url" content="https://dripps.vercel.app" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@Drippss" />
+    <meta name="twitter:title" content="Drippss" />
+    <meta name="twitter:description" content="Premium activewear & leggings — Drippss." />
+    <meta name="twitter:image" content="/og.png" />
   </head>
 
   <body>
