--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Drippss" />
     <meta name="twitter:title" content="Drippss" />
-    <meta name="twitter:description" content="Premium activewear & leggings — Drippss." />
+    <meta name="twitter:description" content="Premium activewear — Drippss." />
     <meta name="twitter:image" content="/og.png" />
   </head>
 
